Крч, мучаемся с фото, бот работает,сначала кидает теорию потом ее удаляет, после этого отправляет фото, и викторину, затем предлагает кнопки для того что бы отправить пользоватлею еще раз теорию, так -же при ошибки пользователя в викторине, вверху есть уведомление, чуть чуть русского слова частоупотребляемое во всех смыслах, поэтому это слово изменить на правильны ответ нужно потом