@@ -15,17 +15,25 @@
   </properties>
 
   <dependencies>
-    <dependency>
+    <dependency>  
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
+
+
     <dependency>
       <groupId>org.telegram</groupId>
       <artifactId>telegrambots</artifactId>
-      <version>6.9.7.1</version>
+      <version>6.9.7.1</version> <!-- Проверьте последнюю версию на GitHub -->
+    </dependency>
+
+    <dependency>
+      <groupId>org.example</groupId>
+      <artifactId>TG_BOT_PRAKTIKA_18_05_25</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <build>
@@ -34,8 +42,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>15</source>
-          <target>15</target>
+          <source>21</source>
+          <target>21</target>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
     </plugins>
